1.99.8
- P4A_DB_Source::getFilters now works also with multivalue fields

1.99.7
- some bugs with multiple rich_textarea and ajax events were fixed
- Turkish translation was added (thanks to Ilyas Toker)
- a bug with disabled rich_textareas was solved

1.99.6
- beforeMovement and afterMovement event triggers were added to P4A_DB_Navigator
- P4A_Table_Navigation_Bar now says "page 1 of 1" instead of "page 1 of 0" if data source is empty
- a bugfix on P4A_Data_Source::firstRow() was done
- javascript code for setFocus() function was simplified
- javascript code for onReturnPress() function was changed
- a bug with P4A_Box constructor was fixed
- PEAR::Validate 0.6.4 was added to pear repository
- P4A_DB_Navigator now highlights the droppable item when a draggable is over it
- P4A_DB_NAvigator does not show the "home" icon if "movements to root" are not allowed (saving space)
- Chinese Traditional translation was added (thanks to 日崎)
- isSortable(), addOrder(), setOrder(), getOrder(), hasOrder(), dropOrder() were moved from P4A_DB_Source to P4A_Data_Source
- a bug with ajax autodetection and configuration was fixed
- P4A_Data_Source::newRow() now triggers beforeMoveRow and afterMoveRow events
- when a row in a P4A_Data_Source is deleted we move to first row instead of last row (caused troubles with db_navigator)
- when reloadRow() in called inside a new row we move to first row instead of last row (caused troubles with db_navigator)
- some other minor bugfixes were done

1.99.5
- a folder_home icon (16x16) was added
- a bug with query2string function for ajax submit was solved
- P4A_DB_Navigator was moved from contribs to core
- a bug with P4A_Field::getAsHidden() was fixed
- some bugfixes for P4A_DB_Navigator were applied
- P4A_DB_Navigator now supports drag&drop (only active item and AJAX is active)
- P4A_DB_Navigator::allowMovement() was added to enable/disable drag&drop
- P4A_DB_Navigator::allowRootsMovement() was added to enable/disable drag&drop of root elements