@@ -1,5 +1,6 @@
 1.99.8
 - P4A_DB_Source::getFilters now works also with multivalue fields
+- function htmlspecialchars_decode was added if php<5.0
 
 1.99.7
 - some bugs with multiple rich_textarea and ajax events were fixed
